language/move-lang/tests/move_check/expansion/friend_decl_imported_duplicates.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/expansion/friend_decl_imported_duplicates.move:7:5
  │
6 │     friend 0x42::A;
  │     --------------- Friend previously declared here
7 │     friend A;
  │     ^^^^^^^^^ Duplicate friend declaration '0x42::A'. Friend declarations in a module must be unique

